# dmpbbo-use

./: CMakeLists.txt  README.md  Task.py  TaskThrowBall.py  cost.txt  dmp_trained_10_for_cpp.json  plot_rollouts.py  pose.txt  run.sh  runSimulationThrowBall.cpp  runSimulationThrowBall.hpp  step1_train_dmp_from_trajectory_file.py  task.json  test  test.cpp  trajectory.txt
dmpbbo/: json_for_cpp.py
dmpbbo/bbo/: CostFunction.py  DistributionGaussian.py  LearningSession.py  run_optimization.py  updaters.py
dmpbbo/bbo_of_dmps/: LearningSessionTask.py  TaskSolver.py  TaskSolverDmp.py  __init__.py  run_optimization_task.py  step_by_step_optimization.py
dmpbbo/dmps/: Dmp.py  DmpWithSchedules.py  Trajectory.py
dmpbbo/dynamicalsystems/: DynamicalSystem.py  ExponentialSystem.py  SigmoidSystem.py  SpringDamperSystem.py  TimeSystem.py
dmpbbo/functionapproximators/: FunctionApproximator.py  FunctionApproximatorLWR.py  FunctionApproximatorRBFN.py  FunctionApproximatorWLS.py  Parameterizable.py  basis_functions.py
include/dmp/: Dmp.hpp  Trajectory.hpp
include/dynamicalsystems/: DynamicalSystem.hpp  ExponentialSystem.hpp  SigmoidSystem.hpp  SpringDamperSystem.hpp  TimeSystem.hpp
include/eigenutils/: eigen_file_io.hpp  eigen_file_io.tpp  eigen_json.hpp  eigen_json.tpp  eigen_realtime_check.hpp
include/functionapproximators/: BasisFunction.hpp  FunctionApproximator.hpp  FunctionApproximatorLWR.hpp  FunctionApproximatorRBFN.hpp
results/training/: dmp_trained_3.json  dmp_trained_4_for_cpp.json  trajectory.txt
